--- a/Resources/Private/Templates/Foundation/Cart/ShowMini.html
+++ b/Resources/Private/Templates/Foundation/Cart/ShowMini.html
@@ -66,7 +66,7 @@
                 <div class="cart_cleaner"><!-- --></div>
 
                 <f:link.page pageUid="{settings.cart.pid}">
-                    <f:translate key="tx_cart.plugin.mini_cart.go_to_cart_page"/>
+                    <f:translate key="tx_cart.plugin.mini_cart.go_to_checkout"/>
                 </f:link.page>
             </f:then>
             <f:else>
