[TASK] add some styling to default template

--- a/Resources/Private/Partials/Default/Product/CartForm.html
+++ b/Resources/Private/Partials/Default/Product/CartForm.html
@@ -20,6 +20,6 @@
                 <input type="text" name="tx_cart_cart[feVariants][{feVariant.sku}]">
             </f:for>
         </f:if>
-        <input type="submit" value="<f:translate key='tx_cart.plugin.form.submit' />">
+        <input type="submit" class="button" value="<f:translate key='tx_cart.plugin.form.submit' />">
     </f:form>
 </div>
