--- a/Resources/Private/Templates/Default/Product/List.html
+++ b/Resources/Private/Templates/Default/Product/List.html
@@ -5,45 +5,48 @@
     <f:flashMessages renderMode="div"/>
 
     <table class="tx_cart">
-        <tr>
-            <th>
-                &nbsp;
-            </th>
-            <th>
-                <f:translate key="tx_cart_domain_model_product.title"/>
-            </th>
-            <th>
-                <f:translate key="tx_cart_domain_model_product.price"/>
-            </th>
-        </tr>
-
-        <f:for each="{products}" as="product">
+        <thead>
             <tr>
-                <td>
-                    <f:link.action action="show" arguments="{product : product}">
-                        <f:if condition="{product.images}">
-                            <f:image src="{product.firstImage.originalResource.originalFile.uid}"
-                                     title="{product.firstImage.originalResource.title}"
-                                     alt="{product.firstImage.originalResource.title}"
-                                     width="100" />
-                        </f:if>
-                    </f:link.action>
-                </td>
-                <td>
-                    <f:if condition="{settings.showPageUids}">
-                        <f:then>
-                            <f:link.action pageUid="{settings.showPageUids}" action="show" arguments="{product: product}">{product.title}</f:link.action>
-                        </f:then>
-                        <f:else>
-                            <f:link.action action="show" arguments="{product: product.uid}">{product.title}</f:link.action>
-                        </f:else>
-                    </f:if>
-                </td>
-                <td>
-                    <f:render partial="Product/Price" arguments="{product: product, settings: settings}"></f:render>
-                </td>
+                <th>
+                    &nbsp;
+                </th>
+                <th>
+                    <f:translate key="tx_cart_domain_model_product.title"/>
+                </th>
+                <th>
+                    <f:translate key="tx_cart_domain_model_product.price"/>
+                </th>
             </tr>
-        </f:for>
+        </thead>
+        <tbody>
+            <f:for each="{products}" as="product">
+                <tr>
+                    <td>
+                        <f:link.action action="show" arguments="{product : product}">
+                            <f:if condition="{product.images}">
+                                <f:image src="{product.firstImage.originalResource.originalFile.uid}"
+                                         title="{product.firstImage.originalResource.title}"
+                                         alt="{product.firstImage.originalResource.title}"
+                                         width="100" />
+                            </f:if>
+                        </f:link.action>
+                    </td>
+                    <td>
+                        <f:if condition="{settings.showPageUids}">
+                            <f:then>
+                                <f:link.action pageUid="{settings.showPageUids}" action="show" arguments="{product: product}">{product.title}</f:link.action>
+                            </f:then>
+                            <f:else>
+                                <f:link.action action="show" arguments="{product: product.uid}">{product.title}</f:link.action>
+                            </f:else>
+                        </f:if>
+                    </td>
+                    <td>
+                        <f:render partial="Product/Price" arguments="{product: product, settings: settings}"></f:render>
+                    </td>
+                </tr>
+            </f:for>
+        </tbody>
     </table>
 
 </f:section>
