--- a/Resources/Private/Templates/Default/Product/Flexform.html
+++ b/Resources/Private/Templates/Default/Product/Flexform.html
@@ -8,7 +8,7 @@
                 controller="Cart">
             <input type="hidden" value="{contentId}" name="tx_cart_cart[contentId]">
             <input type="text" value="1" name="tx_cart_cart[quantity]">
-            <f:form.submit value="{f:translate(key: 'tx_cart.add_product', default: '[add product]')}"/>
+            <f:form.submit class="button" value="{f:translate(key: 'tx_cart.add_product', default: '[add product]')}"/>
         </f:form>
     </div>
 </f:section>
